Fixing IE overflow: hidden bug

--- a/domassistant-site/css/ie.css
+++ b/domassistant-site/css/ie.css
@@ -19,6 +19,7 @@ pre{
 }
 
 .content-block{
+	overflow: visible;
 	height: 440px;
 }
 
